# test3

./: .pypackage-builder-answers.yml  README.md  mkdocs.yaml  pixi.toml  pyproject.toml
config/: coverage.toml  hatch.toml  mypy.ini  pytest.ini  releaserc.toml  ruff.toml
src/just_another_python_package/: __init__.py  main.py
tests/: test_say_hello.py
